# mfdr

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  README.md  claude_develop_command.md  generate_pr.sh  pyproject.toml  pytest.ini  run_scan.sh  test_coverage_boost.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  test.yml
mfdr/: __init__.py  __main__.py  apple_music.py  completeness_checker.py  file_manager.py  knit_optimizer.py  library_xml_parser.py  main.py  musicbrainz_client.py  simple_file_search.py  track_matcher.py
tests/: conftest.py  test_apple_music.py  test_apple_music_delete.py  test_apple_music_integration.py  test_auto_accept.py  test_auto_add_detection.py  test_candidate_scoring.py  test_checkpoint_manager.py  test_cli.py  test_cli_commands.py  test_completeness_checker.py  test_coverage_boost.py  test_coverage_final_push.py  test_enhanced_display.py  test_file_manager.py  test_file_services.py  test_file_utils.py  test_immediate_deletion.py  test_integration.py  test_interactive_knit_repair.py  test_interactive_mode.py  test_interactive_score_fix.py  test_knit.py  test_knit_optimizer.py  test_library_xml_parser.py  test_main.py  test_main_additional.py  test_main_comprehensive.py  test_main_coverage.py  test_main_coverage_boost.py  test_main_final_push.py  test_matching.py  test_metadata_display.py  test_musicbrainz_additional.py  test_musicbrainz_client.py  test_persistent_id_fix.py  test_qscan_checkpoint.py  test_removal_feature.py  test_scan_directory_checkpoint.py  test_scan_service.py  (+10 more)
(+28 files in other folders)
